--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -9,44 +9,479 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
+    color: $Gray;
+    line-height: 1.6;
 }
 
+.title {
+    color: $DarkViolet;
+    font-weight: 700 !important;
+    font-family: 'Poppins', sans-serif !important;
+}
+h5 {
+    color: white;
+    font-family: 'Poppins', sans-serif !important;
+    font-weight: 700 !important;
+    margin-bottom: 2rem;
+
+}
 a {
     text-decoration: none !important;
     color: $Gray !important;
     font-weight: 700 !important;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
     &:hover {
         color: $DarkViolet !important;
     }
 }
+.text {
+    font-family: 'Poppins', sans-serif !important;
+    color: $Gray;
+    font-weight: 400 !important;
+}
 li {
     color: $Gray;
     list-style-type: none;
+    font-family: 'Poppins', sans-serif !important;
     font-weight: 500 !important;
+    padding: 0.5rem 0;
+    cursor: pointer;
     &:hover {
         color: $Cyan !important;
     }
 }
-.navbar-toggler {
-    border: none;
-    outline: none;
+.btn.btn__getstarted {
+    margin-top: 1rem;
+    width: max-content;
+    background-color: $Cyan;
+    color: white;
+    padding: 0.9rem 2.8rem;
+    border-radius: 3rem;
+    font-weight: 700;
+    &:hover {
+        opacity: 0.60;
+        color: white;
+    }
+}
+
+/*Navigation Bar*/
+.header {
+    width: 100%;
+    overflow: hidden;
+    justify-content: center;
+    align-items: baseline;
+  }
   
-     &:focus,
-     &:active,
-     &-icon:focus {
-       outline: none;
-       border: none;
-       color: black;
-       box-shadow: none;
-     }
+  .header__menu {
+    display: flex;
+    width: 100%;
+    padding: 3rem 10rem 2rem 10rem;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2.5rem;
+  }
+  .header__links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+  }
+  .header__links img {
+    margin-top: 0.4rem;
+  }
+  .header__buttons {
+    display: flex;
+    width: 100%;
+    height: auto;
+    gap: 2.4rem;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+  }
+  .header__buttons ul {
+    width: max-content;
+    display: flex;
+    justify-content: space-between;
+    gap: 1.6rem;
+    font-size: 16px;
+    font-weight: 700;
+    &:hover {
+        color: $VeryDarkViolet;
+    }
+  }
+  .buttons {
+    display: flex;
+    width: auto;
+    max-width: max-content;
+    align-items: center;
+    gap: 2rem;
+    font-size: 16px;
+    font-weight: 700;
+  }
+  
+  .button__login,
+  .button__signup {
+    cursor: pointer;
+  }
+  .button__login {
+    color: $GrayishViolet;
+  }
+  .button__signup {
+    background-color: $Cyan;
+    color: #ffff;
+    padding: 0.5rem 1.5rem;
+    border-radius: 3rem;
+    font-weight: 700;
+  }
+  .button__signup:hover {
+    background-color: hsl(180, 56%, 65%);
+  }
+  .header__mobile {
+    display: none;
+  }
+/*Brand Section*/
+.brand {
+    margin-top: 3rem;
+    padding-bottom: 10rem;
+    background-color: #fff;
+    .brand-text {
+        padding-top: 6rem;
+        h1{
+            font-size: 4rem;
+        }
+        p{ 
+            @extend .text;
+            font-size: 1.5rem;
+        }
+        
+    }
 }
 
 
-/*Navigation Bar*/
+/*Search Link*/
+.hero-section {
+    background-color: rgb(240, 241, 246);
+}
+#form{
+    background-image: url("../images/bg-shorten-desktop.svg");
+    background-color: $DarkViolet;
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem;
+    border-radius: 6px;
+    margin-top: -4rem;
+}
+
+#link{
+    height: 3.5em;
+    width: 56rem;
+    border: solid transparent;
+    border-radius: 0.5em;
+    padding-left: 2em;
+}
+
+.input-link input::placeholder {
+    color: $Red;
+    font-weight: 500;
+    font-size: 1.2em;
+}
+
+#link:focus::placeholder{
+    color: $Red;
+}
+
+.btn.btn__shorten{
+    margin-left: 1em;
+    color: #fff;
+
+    background-color: $Cyan;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 0.5em;
+    &:hover {
+        opacity: 0.99 !important;
+        color: #fff;
+    }
+}
+
+.error-message{
+    position: absolute;
+    margin-left: -48rem;
+    margin-top: 5rem;
+}
+
+#error{
+    color: $Red;
+    font-style: italic;
+    font-size: 0.8em;
+}
+
+.shortened_links{
+    background-color: white;
+    margin: 1em 7em;
+    padding: 1em;
+    text-align: right;
+}
+
+.original_link, .new_link {
+    padding: .5em 1em;
+    display: inline;
+}
+
+.original_link {
+    color: $VeryDarkViolet;
+    float: left;
+}
+
+.new_link {
+    color: $Cyan;
+}
+
+.copy_button {
+    padding: .7em 2em;
+    border: none;
+    background-color: $Cyan;
+    color: white;
+    border-radius: 0.5em;
+    float: right;
+}
+
+.copy_button:hover {
+    opacity: 0.60;
+    cursor: pointer;
+}
 
 
-/*Intro Section*/
-/**/
-/**/
-/**/
-/**/
+/*Stats Section*/
+
+.stats-section {
+    margin-top: 8rem;
+    .stats-title {
+        @extend .title;
+        text-align: center;
+    }
+    .stats-text {
+        @extend .text;
+        text-align: center;
+        font-size: 1.4rem;
+    }
+    .background {
+        background-color: #fff;
+    }    
+}
+.statistics__detaills {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+  }
+  .detaills {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+    background-color: var(--White);
+    padding: 5rem 2rem 2.5rem 2rem;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+    height: max-content;
+  }
+  .detaills img {
+    background-color: var(--Dark_Violet);
+    padding: 1.5rem;
+    border-radius: 50%;
+    margin-top: -8rem;
+  }
+  .detaills h2 {
+    margin-top: 1rem;
+    font-size: 22px;
+    color: var(--Very_Dark_Viole);
+  }
+  .detaills p {
+    font-size: 15px;
+    line-height: 1.7;
+  }
+  
+  .detaills:nth-child(2) {
+    margin-top: 3rem;
+  }
+  .detaills:nth-child(3) {
+    margin-top: 5.7rem;
+  }
+  .bar {
+    background-color: var(--Cyan);
+    height: 9px;
+    width: 70%;
+    margin-top: 31.5rem;
+    position: absolute;
+    z-index: 0;
+  }
+  
+  @media (max-width: 1026px) {
+    
+    .statistics__header {
+      padding: 0;
+      padding: 5rem 0 3rem 0;
+    }
+    .statistics__header h1 {
+      padding-bottom: 20px;
+      font-size: 28px;
+      text-align: center;
+    }
+    .statistics__header p {
+      width: 100%;
+      font-size: 17px;
+    }
+  
+    .statistics__detaills {
+      grid-template-columns: none;
+      grid-gap: 0rem;
+    }
+  
+    .detaills {
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+    }
+  
+    .detaills img {
+      background-color: var(--Dark_Violet);
+      padding: 1.5rem;
+      border-radius: 50%;
+      margin-top: -8rem;
+    }
+    .detaills h2 {
+      text-align: center;
+      font-size: 22px;
+      color: var(--Very_Dark_Viole);
+    }
+    .detaills p {
+      text-align: center;
+      font-size: 15px;
+      line-height: 1.7;
+    }
+    .detaills:nth-child(1) {
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+    }
+    .detaills:nth-child(2) {
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+    }
+    .detaills:nth-child(3) {
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+    }
+  
+    .bar {
+      background-color: var(--Cyan);
+      height: 700px;
+      width: 8px;
+      margin-top: 20rem;
+      position: absolute;
+      z-index: 0;
+      transform: rotateY(180eg);
+    }
+  }
+
+/*Boost Section*/
+
+.boost-section {
+    background-image: url('../images/bg-boost-desktop.svg');
+    background-color: $DarkViolet;
+    background-size: cover;
+    padding: 3rem 0;
+    .boost-title {
+        @extend .title;
+        color: white;
+        text-align: center;
+    }
+    .boost-button {
+        @extend .btn.btn__getstarted;
+        display: flex;
+        border-style: none;
+        margin-top: 2rem;
+    }
+}
+
+/*Footer Section*/
+
+#footer {
+    background-color: $VeryDarkViolet;
+    color: white; 
+    padding-top: 4rem;
+    .svg {
+        height: 1.7rem;
+        width: auto;
+        padding-right: 1rem;
+        &:hover path{
+            fill: $Cyan;
+        }
+    }
+
+}
+
+
+/*Media Query*/
+@media (max-width: 1026px) {
+    .header__menu {
+      display: flex;
+      width: 100%;
+      padding: 2rem;
+      align-items: center;
+      justify-content: space-between;
+    }
+  
+    .header__buttons {
+      display: flex;
+      width: calc(100% - 64px);
+      flex-direction: column;
+      margin-top: 24rem;
+      padding: 2rem 2rem;
+      position: absolute;
+      justify-content: center;
+      align-items: center;
+      background-color: $DarkViolet;
+      z-index: 99;
+      text-align: center;
+      border-radius: 1rem;
+    }
+  
+    .header__buttons ul {
+      flex-direction: column;
+      width: 100%;
+      gap: 1.3rem;
+      border-bottom: 0.01px solid $GrayishViolet;
+      padding-bottom: 1.5rem;
+    }
+    .header__buttons ul li {
+      color: white;
+    }
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: 0;
+      margin: 0 auto;
+    }
+    .button__login {
+      padding: 1rem 0;
+      color: white;
+    }
+    .button__signup {
+      width: 100%;
+      padding: 0.7rem 5rem;
+    }
+    .header__mobile {
+      display: block;
+    }
+    .header__mobile i {
+      font-size: 26px;
+      color: $Gray;
+    }
+  }
