--- a/Sass/main.css
+++ b/Sass/main.css
@@ -14,8 +14,8 @@ body {
   line-height: 1.6;
 }
 
-.title, .statistics__header h1, .boost-section .boost-title {
-  color: #3b3054;
+.title, .statistics__header h2, .detaills h4, .boost-section .boost-title {
+  color: #232127;
   font-weight: 700 !important;
   font-family: 'Poppins', sans-serif !important;
 }
@@ -39,7 +39,7 @@ a:hover {
   color: #3b3054 !important;
 }
 
-.text, .brand .brand-text p, .statistics__header p {
+.text, .brand .brand-text p, .statistics__header p, .detaills p {
   font-family: 'Poppins', sans-serif !important;
   color: #bfbfbf;
   font-weight: 400 !important;
@@ -92,7 +92,7 @@ li:hover {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  padding: 3rem 10rem 2rem 10rem;
+  padding: 3rem 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -385,7 +385,7 @@ li:hover {
   padding: 7.6rem 0 6.3rem 0;
 }
 
-.statistics__header h1 {
+.statistics__header h2 {
   padding-bottom: 10px;
 }
 
@@ -433,15 +433,8 @@ li:hover {
   margin-top: -8rem;
 }
 
-.detaills h2 {
+.detaills h4 {
   margin-top: 1rem;
-  font-size: 22px;
-  color: #232127;
-}
-
-.detaills p {
-  font-size: 15px;
-  line-height: 1.7;
 }
 
 .detaills:nth-child(2) {
